--- a/style.css
+++ b/style.css
@@ -61,6 +61,44 @@ body {
 .middle .main{
     background-color: yellow;
     flex-grow: 5;
+    display: flex;
+    flex-direction: column;
+}
+
+.middle .top{
+    display: flex;
+    justify-content: center;
+}
+.middle .main .top img{
+    height: 200px;
+    margin-top: 20px;
+}
+
+.bottom{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.bottom h1{
+    text-align: center;
+    
+}
+.bottom .cards{
+    display: flex;
+    justify-content: center;
+}
+
+.card{
+    width: 200px;
+    margin: 10px;
+    text-align: center;
+}
+
+.card img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
 }
 
 .foot {
